✨ final, fixed weekview beign too big, updated static.json, removed extra console.log's

--- a/css/root.css
+++ b/css/root.css
@@ -1,18 +1,4 @@
 :root {
-	--class-color: #f0f;
-	--class-color-bright: #f0f;
-	--class-color-trans: #f0f;
-	--blue-color: #f0f;
-	--blue-color-trans: #f0f;
-	--break-color: #f0f;
-	--break-color-bright: #f0f;
-	--break-color-dark: #f0f;
-	--break-color-trans: #f0f;
-	--end-color: var(--blue-color);
-	--start-color: var(--class-color);
-	--grey-trans: #f0f;
-	--white-subtle: #f0f;
-
 	/* Presets */
 	--dark: #86756d;
 	--orange: #ff7a51;
@@ -80,7 +66,7 @@
 @media (prefers-color-scheme: dark) {
 	:root {
 		/* Presets */
-		--dark: #d3c4be;
+		--dark: #ddd6d4;
 		--orange: #ff7a51;
 		--green: #73c577;
 		--blue: #8081d8;
