--- a/pages/weekview/css/style.css
+++ b/pages/weekview/css/style.css
@@ -1,10 +1,7 @@
 #root-div {
-	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
-	align-items: center;
 	justify-content: center;
-	padding: 0.35rem;
 }
 
 /* Day table */
@@ -22,7 +19,7 @@
 	user-select: none;
 	background-color: var(--week-table-background);
 	box-shadow: 0 0.2rem 1rem var(--shadow-color);
-	margin: 0.35rem;
+	margin: 0.35rem 0.7rem;
 	border-radius: 1.6rem;
 }
 
